[package]
name = "tcp_game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3.3" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"