[package]
name = "tcp_game_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3.3" }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tokio = { version = "1.18.1", features = ["full"] }
tokio-util = {version = "0.7.1", features = ["codec"]}
tokio-stream = "0.1.8"
futures = "0.3.21"
bytes = "1.1.0"